	  (DLR)
	- After noecho(), call disable_signals() and
	  disable_flow_control(), the latter only if PRESERVE is not
	  set. (DLR)
	- Move the savetty() call down from just after initscr() to just
	  after the terminal is properly set up, so that we can restore
	  it easily after a resize. (DLR)
	- Add missing cast to char when calling do_char(). (DLR)
- nano.h:
	- Since REGEXP_COMPILED is only used in search.c, convert it
	  from a flag to a static int there. (DLR)
	- Add justbegend enum, used in do_para_search(). (DLR)
	- Add updown enum, used in edit_scroll(). (DLR)
- proto.h:
	- Remove unused xpt() and add_marked_sameline() prototypes.
	  (DLR)
	- Add missing #ifdefs around the nstristr() and get_mouseinput()
	  prototypes. (DLR)
- rcfile.c:
	- Move "rebinddelete" up in the list of options so that the list
	  is in alphabetical order. (DLR)
- search.c:
  regexp_init()
	- Overhaul for efficiency.  Also check if regcomp() failed, and
	  if so, display "Bad regex" message on the statusbar, so that
	  we don't have to display it separately after every call to
	  this function. (David Benbennick)
  search_init()
	- Only check whether USE_REGEXP is set, and hence whether or not
	  to display "[Regexp]" on the search prompt, if HAVE_REGEX_H is
	  defined. (DLR)
  not_found_msg()
	- Convert to properly handle strings generated by
	  display_string() that have been used in the search prompt
	  since 1.3.0. (David Benbennick)
- utils.c:
  is_blank_char()
	- New function used as an isblank() equivalent, since isblank()
	  is a GNU extension. (DLR)
  nstricmp(), nstrnicmp()
	- Add extra blank lines for greater readability, and remove
	  unneeded test for n's being less than zero (since it's already
	  been tested for being greater than zero or equal to zero at
	  that point) from nstrnicmp(). (DLR)
  stristr()
	- Rename to nstristr() to avoid a potential conflict with an
	  existing stristr() function, and move up to just after